CHANGELOG

2015-03-27: Update Play Store URL to {quja'} keyboard in help.
2015-03-23: Added Julius Caesar and full moon.
2015-03-06: Add new words from Festival of the Spoken Nerd DVD. Minor edits.
2015-02-06: Add Italian translations for UI.
2015-01-12: Remove tutorial (since ShowcaseView has compatibility issues with newer Android versions)
2014-12-25: Attempt to update appcompat support library to v21, failure.
2014-12-17: Remove extcan from DeCandido words vetted by Marc Okrand for qepHom 2014.
2014-12-03: Remove hyp annotation from some Klingon Monopoly words.
2014-12-02: Added colour-coding to indicate different parts of speech. Show {pIqaD} in more places.
2014-11-30: Fixed rover placement bug with some complex sentences.
2014-11-26: Added extra-canonical vocabulary from Klingon Blockly.
2014-11-25: Added social network preference setting.
2014-11-16: qepHom vocabulary related to: ranks, computers, knots, quantum mechanics, The Klingon Art of War.
2014-11-12: qepHom vocabulary related to geometry and card games.
2014-10-23: Audio complete for TTS engine.
2014-09-25: Misc. updates.
2014-07-27: Added new proverbs from qep'a' 2014. Enabled search for German definitions.
2014-07-26: Remove dependency on ActionBarSherlock.

AppCompat.Dark theme generated using:
http://jgilfelt.github.io/android-actionbarstylegenerator/#name=Appcompatdark&compat=appcompat&theme=dark&actionbarstyle=transparent&texture=0&hairline=0&neutralPressed=1&backColor=2D2D2D%2C100&secondaryColor=151515%2C100&tabColor=33B5E5%2C100&tertiaryColor=303030%2C100&accentColor=33B5E5%2C100&cabBackColor=002E3E%2C100&cabHighlightColor=33B5E5%2C100

2014-07-21: Link hand and foot words; improve Shakespeare entries; added lyrics for {yIH bom}.
2014-07-15: Try to work around a bug where the action bar sometimes disappears.
2014-06-14: Minor edits to database.
2014-04-29: Better integration with TTS.
2014-04-16: Add Text-To_Speech ability (requires TTS engine which supports Klingon).
