@@ -1,5 +1,6 @@
 CHANGELOG
 
+2015-04-07: minor edits to database.
 2015-03-27: Update Play Store URL to {quja'} keyboard in help.
 2015-03-23: Added Julius Caesar and full moon.
 2015-03-06: Add new words from Festival of the Spoken Nerd DVD. Minor edits.
